fixed overlapping of try and location buttons on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,7 @@ h1{
 
 main{
 	min-height: 85vh;
+	margin-top: 50vh;
 }
 
 footer{
